# business-review

./: Makefile  br.py  data_processing.py  jira_client.py  pyproject.toml
.github/workflows/: codeql.yml
