[tool.poetry]
name = "sales"
version = "0.1.0"
description = ""
authors = ["Claudio Caletti <claudio@buildo.io>"]

[tool.poetry.dependencies]
python = "3.10.6"
numpy = "^1.21.5"
requests = "^2.26.0"
seaborn = "^0.11.2"
jupyterlab-darkside-ui = "^0.1.9"
jupyterthemes = "^0.20.0"
bokeh = "2.4.3"
jupyter-contrib-nbextensions = "^0.5.1"
rise = "^5.7.1"
streamlit = "^1.13.0"
watchdog = "^2.1.9"
pylint = "^2.15.4"
mypy = "^0.982"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
